--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@types/body-parser": "^1.17.0",
     "@types/chai": "^4.2.0",
+    "@types/chai-http": "^4.2.0",
     "@types/express": "^4.17.0",
     "@types/helmet": "0.0.43",
     "@types/mocha": "^5.2.7",
@@ -34,12 +35,16 @@
   },
   "devDependencies": {
     "chai": "^4.2.0",
+    "chai-exclude": "^2.0.2",
+    "chai-http": "^4.3.0",
+    "chai-like": "^1.1.1",
     "eslint": "^6.1.0",
     "eslint-config-standard": "^13.0.1",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-node": "^9.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.0",
+    "express-list-endpoints": "^4.0.1",
     "husky": "^3.0.3",
     "mocha": "^6.2.0",
     "nyc": "^14.1.1",
