--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,14 @@
 language: node_js
-node_js: 
-  - "stable"
-cache:
-  directories:
-    - "node_modules"
+node_js:
+  - 8.6
+  - 9
+  - 10
+  - 10.11
 before_script:
   - npm install
 script:
   - npm test
+branches:
+  only:
+    - master
+    - travis
