--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,12 @@
 language: node_js
-node_js: 
-  - "stable"
-cache:
-  directories:
-    - "node_modules"
+node_js:
+  - 8.6
+  - 9
+  - 10
+before_script:
+  - npm install
+script:
+  - npm test
+branches:
+  only:
+    - master
